# Clipvault

./: .dockerignore  .env.example  .gitignore  Dockerfile  clipvault.html  package-lock.json  package.json  server.js
jarvis-os/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
jarvis-os/.github/workflows/: ci.yml  deploy.yml
jarvis-os/apps/api/: jest.config.ts  package.json  tsconfig.json
jarvis-os/apps/api/src/: index.ts
jarvis-os/apps/desktop/: package.json  tsconfig.json
jarvis-os/apps/desktop/electron/: main.ts  preload.ts
jarvis-os/apps/web/: next.config.ts  package.json  tailwind.config.ts
jarvis-os/apps/web/app/: globals.css  layout.tsx  page.tsx
jarvis-os/apps/web/hooks/: useChat.ts  useVoice.ts  useWebSocket.ts
jarvis-os/apps/web/lib/: api.ts  utils.ts
jarvis-os/docker/: ai.Dockerfile  api.Dockerfile  web.Dockerfile
jarvis-os/docker/postgres/: init.sql
jarvis-os/services/ai/: config.py  main.py  pyproject.toml  requirements.txt
jarvis-os/services/ai/agents/: research_agent.py
jarvis-os/services/ai/memory/: vector_store.py
jarvis-os/services/ai/routers/: agents.py  memory.py  tools.py  voice.py
jarvis-os/services/ai/tests/: test_tools.py  test_whisper.py
jarvis-os/services/ai/tools/: browser.py  computer.py
jarvis-os/services/ai/voice/: wake_word.py  whisper_service.py
public/: manifest.json  sw.js
routes/: auth.js  auto.js  process.js  trending.js  upload.js
scripts/: gen-icons.js
utils/: downloader.js  processor.js  scheduler.js  youtube-api.js  yt-dlp.js
(+50 files in other folders)
